# FileEncryption

./: .gitignore  README.md  decrypt.py  encrypt.py  generate_key.py  pyproject.toml
