[tool.poetry]
name = "file-encryption"
version = "0.1.0"
description = ""
authors = ["tyropro <tyroprocodes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
